# backend

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
migrations/: 20250101000000_initial_schema.down.sql  20250101000000_initial_schema.up.sql  20250109000001_add_enddate_to_market_createds.down.sql  20250109000001_add_enddate_to_market_createds.up.sql  20250109000002_bet_placed_triggers.down.sql  20250109000002_bet_placed_triggers.up.sql  20250109000003_bets_extended_trigger.down.sql  20250109000003_bets_extended_trigger.up.sql  20250109000004_fix_volume_calculation.down.sql  20250109000004_fix_volume_calculation.up.sql  20250109000005_recalculate_bet_odds.down.sql  20250109000005_recalculate_bet_odds.up.sql  20250109000006_update_bet_trigger_calculate_odds.down.sql  20250109000006_update_bet_trigger_calculate_odds.up.sql  20250110000001_update_for_vault_shares.down.sql  20250110000001_update_for_vault_shares.up.sql  20250110000002_fix_event_schema_for_new_contract.down.sql  20250110000002_fix_event_schema_for_new_contract.up.sql  20250110000003_update_sync_functions_for_new_contract.down.sql  20250110000003_update_sync_functions_for_new_contract.up.sql  20250110000004_fix_process_bet_placed_trigger.down.sql  20250110000004_fix_process_bet_placed_trigger.up.sql  20250110000005_fix_duplicate_market_updates.down.sql  20250110000005_fix_duplicate_market_updates.up.sql  20250131000001_add_rebalancer_delegation_events.down.sql  20250131000001_add_rebalancer_delegation_events.up.sql  20250131000002_add_market_vault_rebalanced.down.sql  20250131000002_add_market_vault_rebalanced.up.sql  20250131000003_fix_user_column_quotes.down.sql  20250131000003_fix_user_column_quotes.up.sql
src/: chart.rs  config.rs  constants.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  openapi.rs  seed.rs
src/admin/: mod.rs  routes.rs
src/middleware/: auth.rs  jwt.rs  mod.rs
(+25 files in other folders)
